--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST=localhost
+DB_HOST=yamabiko.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=mensajeria
+DB_PASSWORD=NgXFwQOWImOiFvRIFYaNNWkHbsAaMdCy
+DB_NAME=railway
+DB_PORT=30986
